# macro-thing

./: Cargo.toml
macro_thing/: Cargo.toml  _expanded.rs
macro_thing/src/: lib.rs  main.rs
macro_thing_core/: Cargo.toml
macro_thing_core/src/: lib.rs
macro_thing_derive/: Cargo.toml
macro_thing_derive/src/: lib.rs
