[package]
name = "macro_thing_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "macro_thing_core"
path = "src/lib.rs"

[dependencies]
chrono = "0.4.31"
inquire = { version = "0.6.2", features = ["date"] }
time = { version = "0.3.30" }
